manifests/istio/traffic-mirroring/preference-v1-mirror-v2-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: preference
spec:
  hosts:
  - preference
  http:
  - route:
    - destination:
        host: preference
        subset: version-v1
    mirror:
      host: preference
      subset: version-v2
---
